[package]
name = "drftr"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A utility library for building Discord bots to draft whatever you like."
repository = "https://github.com/Sam-Dunlap/drftr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = {version = "0.5.5", features = ["chrono"]}
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }